# mud-drifter

./: .gitignore  .spacemacs  .tmux.conf  README.md  default.nix  mud-drifter.cabal  mud-drifter.nix  package.yaml  run-emacs-daemon.sh  session.hs  shell.nix  stack.yaml  tmux-workspace.sh
app/: Main.hs
archive/evt-log/: abandonedHouse.evt  on-a-river-quest.evt  secondToFirstVillage.evt
archive/server-input-log/: basicItemsStats.log.1  basicItemsStats.log.2
cache/: mobs-aliases.json
src/: CommandExecutor.hs  Console.hs  Drifter.hs  Event.hs  Logger.hs  Mapper.hs  Parser.hs  Person.hs  RemoteConsole.hs  ServerInputParser.hs  UserInputParser.hs  World.hs
src/task/: PersonTask.hs  Travel.hs
test/: DrifterSpec.hs  MapperSpec.hs  ParserSpec.hs  PersonSpec.hs  ServerInputParserSpec.hs  Spec.hs  TravelTaskSpec.hs  UserInputParserSpec.hs
test/logs/: zones.list  zones.names
