name:                mud-drifter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mud-drifter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Person
                     , Mapper
  build-depends:       base >= 4.7 && < 5
                     , text
                     , fgl
                     , bytestring
                     , mtl
  default-language:    Haskell2010

executable mud-drifter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mud-drifter
                     , pipes-network
                     , pipes-bytestring
                     , pipes-text
                     , pipes-concurrency
                     , pipes-attoparsec
                     , pipes-parse
                     , pipes
                     , text
                     , attoparsec
                     , bytestring
                     , word8
                     , network
                     , network-simple
                     , lens-family-core
  default-language:    Haskell2010

test-suite mud-drifter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mud-drifter
                     , hspec
                     , QuickCheck
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mud-drifter
