name:                mud-drifter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mud-drifter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/task
  exposed-modules:     Person
                     , Mapper
                     , Console
                     , RemoteConsole
                     , ServerInputParser
                     , UserInputParser
                     , Event
                     , Travel
                     , PersonTask
                     , Logger
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , mtl
                     , reactive-banana
                     , network
                     , network-simple
                     , pipes
                     , pipes-concurrency
                     , pipes-network
                     , pipes-bytestring
                     , pipes-text
                     , pipes-parse
                     , pipes-attoparsec
                     , pipes-safe
                     , safe-exceptions >= 0.1.7.0
                     , attoparsec
                     , async
                     , word8
                     , configurator
                     , fgl
                     , directory
                     , MissingH
                     , parsec
                     , containers
                     , binary
                     , timers
                     , suspend
                     , protolude
                     , wires
  default-language:    Haskell2010

executable mud-drifter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mud-drifter
                     , pipes
                     , pipes-network
                     , pipes-bytestring
                     , pipes-text
                     , pipes-attoparsec
                     , pipes-parse
                     , pipes-concurrency
                     , pipes-safe
                     , text
                     , attoparsec
                     , bytestring
                     , word8
                     , network
                     , network-simple
                     , reactive-banana
                     , async
                     , lens
                     , binary
                     , unicode-show
                     , protolude
                     , wires
  default-language:    Haskell2010

test-suite mud-drifter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       UserInputParserSpec
                     , ServerInputParserSpec
                     , PersonSpec
                     , MapperSpec
                     , TravelTaskSpec
  main-is:             Spec.hs
  build-depends:       base
                     , mud-drifter
                     , hspec
                     , hspec-attoparsec
                     , QuickCheck
                     , quickcheck-instances
                     , bytestring
                     , pipes-bytestring
                     , pipes-attoparsec
                     , pipes
                     , text
                     , fgl
                     , parsec
                     , containers
                     , protolude
                     , reactive-banana
                     , wires
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mud-drifter
